third question added timer added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,4 @@
-.page-title {
-    align-items: left;
-}
-
-.timer {
-    align-items: right;
-    align-self: right;
+body {
+    background-color: grey;
+    color: white;
 }
